--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "EagleSpiritAcademyBackend",
   "main": "index.js",
+  "engines": {
+    "node": "14.20.1"
+  },
   "scripts": {
     "start": "npm run build && node ./build/src/index.js",
     "start:dev": "nodemon --exec babel-node ./src/index.js",
