--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
